--- a/index.html
+++ b/index.html
@@ -4,14 +4,102 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-  <title>PurpleStar Property Operations</title>
-  <meta name="description" content="Calgary property maintenance & rental turnover services for landlords and property managers: move-out cleaning, punch-list repairs, snow & ice removal, yard care, and junk removal/disposal. Fast response and clear pricing." />
+  <title>Calgary Property Maintenance & Rental Turnovers | Cleaning, Snow Removal, Junk Removal | PurpleStar</title>
+  <meta name="description" content="PurpleStar Property Ops provides Calgary property maintenance and rental turnover services for landlords and property managers: move-out cleaning, punch-list repairs, snow & ice removal, yard care, and junk removal/disposal. Fast response and clear pricing." />
 
-  <meta property="og:title" content="PurpleStar Property Ops — Calgary Property Maintenance & Turnovers" />
-  <meta property="og:description" content="Turnovers, cleaning, snow & ice, yard care, and junk removal/disposal. Built for landlords and property managers." />
+  <link rel="canonical" href="https://purplestar.ca/" />
+  <meta name="robots" content="index,follow" />
+  <meta name="theme-color" content="#0b0614" />
+
+  <!-- Favicons -->
+  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
+
+  <!-- Social -->
+  <meta property="og:title" content="PurpleStar Property Ops — Calgary Property Maintenance & Rental Turnovers" />
+  <meta property="og:description" content="Move-out cleaning, turnovers, repairs, snow & ice removal, yard care, and junk removal/disposal for landlords and property managers in Calgary." />
   <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://purplestar.ca/" />
 
   <link rel="stylesheet" href="styles.css" />
+
+  <!-- Local Business structured data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "HomeAndConstructionBusiness",
+    "name": "PurpleStar Property Ops",
+    "url": "https://purplestar.ca/",
+    "telephone": "+14034711721",
+    "areaServed": [
+      "Calgary, AB",
+      "Airdrie, AB",
+      "Chestermere, AB",
+      "Okotoks, AB"
+    ],
+    "description": "Calgary property maintenance and rental turnover services for landlords and property managers: move-out cleaning, punch-list repairs, snow & ice removal, yard care, and junk removal/disposal.",
+    "serviceType": [
+      "Rental turnovers",
+      "Move-out cleaning",
+      "Punch-list repairs",
+      "Snow removal",
+      "Ice removal and de-icing",
+      "Yard care and lawn care",
+      "Junk removal and disposal"
+    ],
+    "contactPoint": [{
+      "@type": "ContactPoint",
+      "telephone": "+14034711721",
+      "contactType": "customer service",
+      "areaServed": "CA",
+      "availableLanguage": ["English"]
+    }]
+  }
+  </script>
+
+  <!-- FAQ structured data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "What areas do you serve?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "We serve Calgary and surrounding areas including Airdrie, Chestermere, and Okotoks. If you’re nearby, reach out and we’ll confirm availability."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How do you price move-out cleaning and rental turnovers?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Starting rates are listed on the website. Final pricing depends on unit size, condition, scope, access, and any disposal fees. We provide clear, upfront quotes before work begins."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do you provide before and after photos?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Photo updates are available on request for move-out cleaning, repairs, yard work, snow/ice visits, and junk removal."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do you handle junk removal and disposal fees?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. We can remove and dispose of furniture, bags, and debris from move-outs. Disposal fees may apply depending on material and load size."
+        }
+      }
+    ]
+  }
+  </script>
 </head>
 
 <body>
@@ -19,7 +107,7 @@
 
   <header class="topbar">
     <div class="container topbar__inner">
-      <a class="brand" href="#" aria-label="PurpleStar Property Ops home">
+      <a class="brand" href="/" aria-label="PurpleStar Property Ops home">
         <img class="brand__logo" src="assets/logo-pro.png" alt="PurpleStar Property Ops" />
         <div class="brand__text">
           <div class="brand__name">PurpleStar</div>
@@ -35,8 +123,8 @@
   </header>
 
   <main id="main">
-    <!-- HERO (PRO) -->
-    <section class="hero" aria-label="Hero">
+    <!-- HERO -->
+    <section class="hero" aria-label="Calgary property maintenance and rental turnovers">
       <div class="hero__bg" aria-hidden="true"></div>
 
       <div class="container hero__grid">
@@ -48,8 +136,8 @@
           </h1>
 
           <p class="hero__sub">
-            Move-out cleaning, punch-list repairs, snow &amp; ice removal, yard care, and junk removal/disposal.
-            Clear quotes, dependable scheduling, and photo updates when requested.
+            Rental turnover services in Calgary including move-out cleaning, punch-list repairs, snow &amp; ice removal,
+            yard care/lawn care, and junk removal/disposal. Clear quotes, dependable scheduling, and photo updates when requested.
           </p>
 
           <div class="hero__cta">
@@ -70,7 +158,7 @@
 
         <aside class="hero__card" aria-label="Quick quote card">
           <h2 class="hero__cardTitle">Quick Quote</h2>
-          <p class="hero__cardSub">Tell us the address + what you need. We’ll respond ASAP.</p>
+          <p class="hero__cardSub">Send the address + what you need. We’ll respond ASAP.</p>
 
           <div class="hero__cardActions">
             <a class="btn btn--primary btn--full" href="#quote">Start Quote</a>
@@ -90,50 +178,50 @@
     <section class="section section--plate" aria-label="Services">
       <div class="container container--wide">
         <header class="section__head">
-          <h2 class="section__title">Our Services</h2>
+          <h2 class="section__title">Property Services in Calgary</h2>
           <p class="section__sub">
-            Built for rental units, flips, and busy owners who need reliable help.
+            One team for turnovers, maintenance, and seasonal work — built for rentals, flips, and busy owners.
           </p>
         </header>
 
         <div class="grid grid--services">
           <article class="card">
-            <img class="card__photo" src="assets/turn.png" alt="Turnovers and repairs" loading="lazy" />
+            <img class="card__photo" src="assets/turn.png" alt="Rental turnovers and punch-list repairs in Calgary" loading="lazy" />
             <div class="card__body">
               <h3>Turnovers &amp; Repairs</h3>
-              <p>Repair punch lists, touch-ups, hardware fixes, and rental-ready resets.</p>
+              <p>Rental turnovers, punch lists, touch-ups, hardware fixes, and rental-ready resets across Calgary.</p>
             </div>
           </article>
 
           <article class="card">
-            <img class="card__photo" src="assets/clean.png" alt="Move-out cleaning" loading="lazy" />
+            <img class="card__photo" src="assets/clean.png" alt="Move-out cleaning in Calgary" loading="lazy" />
             <div class="card__body">
               <h3>Move-Out Cleaning</h3>
-              <p>Deep cleans that reset the unit quickly and help you rent faster.</p>
+              <p>Move-out and deep cleaning that resets the unit quickly and helps you rent faster in Calgary.</p>
             </div>
           </article>
 
           <article class="card">
-            <img class="card__photo" src="assets/snow.png" alt="Snow and ice removal" loading="lazy" />
+            <img class="card__photo" src="assets/snow.png" alt="Snow and ice removal in Calgary" loading="lazy" />
             <div class="card__body">
               <h3>Snow &amp; Ice Removal</h3>
-              <p>Entryways, sidewalks, and de-icing — scheduled or on-demand.</p>
+              <p>Snow clearing, sidewalk shoveling, entryways, and de-icing — scheduled or on-demand.</p>
             </div>
           </article>
 
           <article class="card">
-            <img class="card__photo" src="assets/mow.png" alt="Seasonal yard care" loading="lazy" />
+            <img class="card__photo" src="assets/mow.png" alt="Yard care and lawn care in Calgary" loading="lazy" />
             <div class="card__body">
               <h3>Seasonal Yard Care</h3>
-              <p>Mow/trim, cleanup, weeds, and exterior tidy (spring/summer).</p>
+              <p>Lawn care, mowing, trimming, weeds, and cleanup for spring/summer property maintenance.</p>
             </div>
           </article>
 
           <article class="card">
-            <img class="card__photo" src="assets/junk.png" alt="Junk removal and disposal" loading="lazy" />
+            <img class="card__photo" src="assets/junk.png" alt="Junk removal and disposal in Calgary" loading="lazy" />
             <div class="card__body">
               <h3>Junk Removal &amp; Disposal</h3>
-              <p>Move-out trash, furniture, and debris removal — responsible disposal.</p>
+              <p>Move-out trash, furniture, and debris removal — responsible disposal. Disposal fees may apply.</p>
             </div>
           </article>
         </div>
@@ -141,6 +229,44 @@
         <p class="services-note">
           No hazardous waste (chemicals, paint, asbestos, biohazards). Disposal fees may apply.
         </p>
+      </div>
+    </section>
+
+    <!-- WHO WE HELP (keyword + conversion) -->
+    <section class="section" aria-label="Who we help">
+      <div class="container">
+        <header class="section__head">
+          <h2 class="section__title">Built for Rental Properties</h2>
+          <p class="section__sub">
+            We work with landlords, investors, and property managers who need reliable turnover help.
+          </p>
+        </header>
+
+        <div class="steps">
+          <div class="step">
+            <div class="step__num">✓</div>
+            <div>
+              <h3>Rental Turnovers</h3>
+              <p>Apartment turnovers, condo turnovers, and house turnovers — from move-out to rent-ready.</p>
+            </div>
+          </div>
+
+          <div class="step">
+            <div class="step__num">✓</div>
+            <div>
+              <h3>Ongoing Property Maintenance</h3>
+              <p>Seasonal upkeep and small repairs to keep your properties in good shape year-round.</p>
+            </div>
+          </div>
+
+          <div class="step">
+            <div class="step__num">✓</div>
+            <div>
+              <h3>Fast Scheduling</h3>
+              <p>Clear communication, realistic timelines, and photo updates when requested.</p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -190,6 +316,42 @@
         <p class="rates-note">
           Starting rates. Final pricing depends on size, condition, access, and disposal fees.
         </p>
+      </div>
+    </section>
+
+    <!-- FAQ (on-page keywords + trust) -->
+    <section class="section section--plate" aria-label="FAQ">
+      <div class="container">
+        <header class="section__head">
+          <h2 class="section__title">FAQ</h2>
+          <p class="section__sub">Quick answers for landlords and property managers.</p>
+        </header>
+
+        <div class="steps">
+          <div class="step">
+            <div class="step__num">Q</div>
+            <div>
+              <h3>Do you offer move-out cleaning in Calgary?</h3>
+              <p>Yes — we handle move-out and deep cleaning for rental units, condos, and houses across Calgary and nearby communities.</p>
+            </div>
+          </div>
+
+          <div class="step">
+            <div class="step__num">Q</div>
+            <div>
+              <h3>What is included in a rental turnover?</h3>
+              <p>Turnovers can include cleaning, minor repairs, punch lists, touch-ups, junk removal, and seasonal items like snow/ice or yard care depending on the property.</p>
+            </div>
+          </div>
+
+          <div class="step">
+            <div class="step__num">Q</div>
+            <div>
+              <h3>How does pricing work?</h3>
+              <p>We provide clear quotes based on scope. Final pricing depends on size, condition, access, and any disposal fees.</p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
