--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <meta name="theme-color" content="#0b0614" />
 
   <!-- Favicons -->
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32.png?v=3">
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16.png?v=3">
-  <link rel="shortcut icon" href="/assets/favicon-32.png?v=3">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16.png">
+  <link rel="shortcut icon" href="/assets/favicon-32.png">
 
 
   <!-- Open Graph -->
