--- a/index.html
+++ b/index.html
@@ -507,7 +507,6 @@
           </div>
 
           <div class="trustbar__meta" aria-label="Review summary">
-            <span class="trustbar__count">3 reviews</span>
             <span class="trustbar__dot" aria-hidden="true">•</span>
             <a class="trustbar__link" href="#quote">Request a quote</a>
           </div>
@@ -517,25 +516,25 @@
           <figure class="review">
             <div class="review__stars" aria-label="5 out of 5 stars">★★★★★</div>
             <blockquote>
-              “<span class="review__text">PASTE REVIEW #1 HERE (keep it 1–2 sentences, specific and real).</span>”
+              “<span class="review__text">Super fast and efficient. Great service and communication.</span>”
             </blockquote>
-            <figcaption class="review__who">— <span>First Name</span>, <span>Calgary</span></figcaption>
+            <figcaption class="review__who">— <span>Eric F</span>, <span>Calgary</span></figcaption>
           </figure>
 
           <figure class="review">
             <div class="review__stars" aria-label="5 out of 5 stars">★★★★★</div>
             <blockquote>
-              “<span class="review__text">PASTE REVIEW #2 HERE (mention speed, communication, or rent-ready result).</span>”
+              “<span class="review__text">Quick and professional. Communicated clearly and delivered on time.</span>”
             </blockquote>
-            <figcaption class="review__who">— <span>First Name</span>, <span>Airdrie</span></figcaption>
+            <figcaption class="review__who">— <span>Alex R.</span>, <span>Airdrie</span></figcaption>
           </figure>
 
           <figure class="review">
             <div class="review__stars" aria-label="5 out of 5 stars">★★★★★</div>
             <blockquote>
-              “<span class="review__text">PASTE REVIEW #3 HERE (mention reliability, scheduling, or photo updates).</span>”
+              “<span class="review__text">Reliable service and great attention to detail. Highly recommend!</span>”
             </blockquote>
-            <figcaption class="review__who">— <span>First Name</span>, <span>Chestermere</span></figcaption>
+            <figcaption class="review__who">— <span>Kory A</span>, <span>Chestermere</span></figcaption>
           </figure>
         </div>
       </div>
