--- a/index.html
+++ b/index.html
@@ -506,10 +506,6 @@
             <span class="tbadge">Calgary + nearby towns</span>
           </div>
 
-          <div class="trustbar__meta" aria-label="Review summary">
-            <span class="trustbar__dot" aria-hidden="true">•</span>
-            <a class="trustbar__link" href="#quote">Request a quote</a>
-          </div>
         </div>
 
         <div class="trustbar__reviews" aria-label="Customer reviews">
@@ -518,7 +514,7 @@
             <blockquote>
               “<span class="review__text">Super fast and efficient. Great service and communication.</span>”
             </blockquote>
-            <figcaption class="review__who">— <span>Eric F</span>, <span>Calgary</span></figcaption>
+            <figcaption class="review__who">— <span>Eric F.</span>, <span>Calgary</span></figcaption>
           </figure>
 
           <figure class="review">
@@ -534,7 +530,7 @@
             <blockquote>
               “<span class="review__text">Reliable service and great attention to detail. Highly recommend!</span>”
             </blockquote>
-            <figcaption class="review__who">— <span>Kory A</span>, <span>Chestermere</span></figcaption>
+            <figcaption class="review__who">— <span>Kory A.</span>, <span>Chestermere</span></figcaption>
           </figure>
         </div>
       </div>
@@ -544,17 +540,16 @@
   <footer class="footer" aria-label="Footer">
     <div class="container footer__inner">
       <div class="nap">
-        <strong>PurpleStar Property Ops</strong>
+        <strong>PurpleStar Property Operations</strong>
         <span>Calgary, AB</span>
         <a href="tel:+14034711721">(403) 471-1721</a>
         <a href="mailto:info@purplestar.ca">info@purplestar.ca</a>
       </div>
-      <span>© <span id="year"></span> PurpleStar Property Ops</span>
+      <span>© <span id="year"></span> PurpleStar Property Operations</span>
     </div>
   </footer>
 
   <!-- Sticky mobile CTA -->
-  <div class="mobile-cta" aria-label="Quick actions">
     <a href="tel:+14034711721">Call/Text</a>
     <a href="#quote">Get Quote</a>
   </div>
