fixing how it works

--- a/index.html
+++ b/index.html
@@ -264,51 +264,51 @@
     <!-- HOW IT WORKS (5 steps) -->
     <section class="section" aria-label="How it works">
       <div class="container">
-        <header class="section__head">
+        <header class="section__head section__head--stack">
           <h2 class="section__title">How It Works</h2>
           <p class="section__sub">Clear steps so you always know what’s happening.</p>
         </header>
 
-        <div class="steps steps--line">
-          <div class="step">
+        <div class="steps steps--flow">
+          <article class="step">
             <div class="step__num">1</div>
-            <div>
+            <div class="step__content">
               <h3>Send Details</h3>
               <p>Address, service needed, and timeline. Photos help.</p>
             </div>
-          </div>
+          </article>
 
-          <div class="step">
+          <article class="step">
             <div class="step__num">2</div>
-            <div>
+            <div class="step__content">
               <h3>Confirm Scope</h3>
               <p>We confirm what’s included and what’s optional.</p>
             </div>
-          </div>
+          </article>
 
-          <div class="step">
+          <article class="step">
             <div class="step__num">3</div>
-            <div>
+            <div class="step__content">
               <h3>Get a Quote</h3>
               <p>Clear pricing (hourly or scoped quote) before work starts.</p>
             </div>
-          </div>
+          </article>
 
-          <div class="step">
+          <article class="step">
             <div class="step__num">4</div>
-            <div>
+            <div class="step__content">
               <h3>Schedule</h3>
               <p>We book a time that fits your urgency and access.</p>
             </div>
-          </div>
+          </article>
 
-          <div class="step">
+          <article class="step">
             <div class="step__num">5</div>
-            <div>
+            <div class="step__content">
               <h3>Complete + Photos</h3>
               <p>Work completed. Photo updates available on request.</p>
             </div>
-          </div>
+          </article>
         </div>
 
         <div class="rates" aria-label="Starting rates">
