--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-  <title>Calgary Property Maintenance & Rental Turnovers | PurpleStar Property Ops</title>
+  <title>Calgary Property Maintenance & Rental Turnovers | PurpleStar Property Operations</title>
   <meta name="description" content="Calgary property maintenance & rental turnover services for landlords and property managers: move-out cleaning, punch-list repairs, snow & ice removal, yard care/lawn care, and junk removal/disposal. Fast response and clear pricing." />
   <link rel="canonical" href="https://purplestar.ca/" />
   <meta name="robots" content="index,follow" />
@@ -35,7 +35,7 @@
   {
     "@context": "https://schema.org",
     "@type": "HomeAndConstructionBusiness",
-    "name": "PurpleStar Property Ops",
+    "name": "PurpleStar Property Operations",
     "url": "https://purplestar.ca/",
     "telephone": "+14034711721",
     "email": "info@purplestar.ca",
@@ -106,11 +106,11 @@
 
   <header class="topbar">
     <div class="container topbar__inner">
-      <a class="brand" href="/" aria-label="PurpleStar Property Ops home">
-        <img class="brand__logo" src="assets/logo-pro.png" alt="PurpleStar Property Ops" width="48" height="48" decoding="async" />
+      <a class="brand" href="/" aria-label="PurpleStar Property Operations home">
+        <img class="brand__logo" src="assets/logo-pro.png" alt="PurpleStar Property Operations" width="48" height="48" decoding="async" />
         <div class="brand__text">
           <div class="brand__name">PurpleStar</div>
-          <div class="brand__sub">Property Ops</div>
+          <div class="brand__sub">Property Operations</div>
         </div>
       </a>
 
