names and new fav

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <!-- Favicons -->
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16.png">
-  <link rel="shortcut icon" href="/assets/favicon-32.png">
+  <link rel="shortcut icon" href="/assets/favicon1.png">
 
   <!-- Open Graph -->
-  <meta property="og:title" content="PurpleStar Property Ops — Calgary Property Maintenance & Rental Turnovers" />
+  <meta property="og:title" content="PurpleStar Property Operations — Calgary Property Maintenance & Rental Turnovers" />
   <meta property="og:description" content="Move-out cleaning, turnovers & repairs, snow & ice removal, yard care, and junk removal/disposal. Built for landlords and property managers in Calgary." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://purplestar.ca/" />
@@ -24,7 +24,7 @@
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="PurpleStar Property Ops — Calgary Property Maintenance & Turnovers" />
+  <meta name="twitter:title" content="PurpleStar Property Operations — Calgary Property Maintenance & Turnovers" />
   <meta name="twitter:description" content="Turnovers, cleaning, snow & ice, yard care, and junk removal/disposal in Calgary." />
   <!-- <meta name="twitter:image" content="https://purplestar.ca/assets/og-image.jpg" /> -->
 
