--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
   <!-- Favicons -->
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32.png">
-  <link rel="shortcut icon" href="/assets/favicon1.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16.png">
+  <link rel="shortcut icon" href="/assets/favicon-32.png">
 
   <!-- Open Graph -->
   <meta property="og:title" content="PurpleStar Property Operations — Calgary Property Maintenance & Rental Turnovers" />
