--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
         <div class="grid grid--services">
           <article class="card">
-            <img class="card__photo" src="assets/turn.png" alt="Rental turnovers and punch-list repairs in Calgary" loading="lazy" decoding="async" width="640" height="420" />
+            <img class="card__photo" src="assets/turn1.png" alt="Rental turnovers and punch-list repairs in Calgary" loading="lazy" decoding="async" width="640" height="420" />
             <div class="card__body">
               <h3>Turnovers &amp; Repairs</h3>
               <p>Punch lists and small repairs to get the unit rent-ready.</p>
