--- a/index.html
+++ b/index.html
@@ -550,8 +550,10 @@
   </footer>
 
   <!-- Sticky mobile CTA -->
-    <a href="tel:+14034711721">Call/Text</a>
-    <a href="#quote">Get Quote</a>
+  <div class="sticky-cta" aria-label="Sticky actions">
+  <a class="sticky-cta__btn" href="tel:+14034711721">Call</a>
+  <a class="sticky-cta__btn" href="sms:+14034711721">Text</a>
+  <a class="sticky-cta__btn sticky-cta__btn--primary" href="#quote">Get Quote</a>
   </div>
 
   <script defer src="main.js"></script>
