--- a/index.html
+++ b/index.html
@@ -4,29 +4,29 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-  <title>Calgary Property Maintenance & Rental Turnovers | PurpleStar Property Operations</title>
-  <meta name="description" content="Calgary property maintenance & rental turnover services for landlords and property managers: move-out cleaning, punch-list repairs, snow & ice removal, yard care/lawn care, and junk removal/disposal. Fast response and clear pricing." />
+  <title>Calgary Property Maintenance | PurpleStar Property Operations</title>
+  <meta name="description" content="Calgary property maintenance & rental turnover services for landlords and property managers and Owners/Renters: move-out cleaning, punch-list repairs, snow & ice removal, yard care/lawn care, and junk removal/disposal. Fast response and clear pricing." />
   <link rel="canonical" href="https://purplestar.ca/" />
   <meta name="robots" content="index,follow" />
   <meta name="theme-color" content="#0b0614" />
 
   <!-- Favicons -->
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="64x64" href="/assets/favlogo.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16.png">
-  <link rel="shortcut icon" href="/assets/favicon-32.png">
+  <link rel="shortcut icon" href="/assets/favlogo.png">
 
   <!-- Open Graph -->
   <meta property="og:title" content="PurpleStar Property Operations — Calgary Property Maintenance & Rental Turnovers" />
   <meta property="og:description" content="Move-out cleaning, turnovers & repairs, snow & ice removal, yard care, and junk removal/disposal. Built for landlords and property managers in Calgary." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://purplestar.ca/" />
-  <!-- <meta property="og:image" content="https://purplestar.ca/assets/og-image.jpg" /> -->
+  <meta property="og:image" content="https://purplestar.ca/assets/logow.jpg" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="PurpleStar Property Operations — Calgary Property Maintenance & Turnovers" />
   <meta name="twitter:description" content="Turnovers, cleaning, snow & ice, yard care, and junk removal/disposal in Calgary." />
-  <!-- <meta name="twitter:image" content="https://purplestar.ca/assets/og-image.jpg" /> -->
+  <meta name="twitter:image" content="https://purplestar.ca/assets/logow.jpg" />
 
   <link rel="stylesheet" href="styles.css" />
 
