--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
   <title>Calgary Property Maintenance | PurpleStar Property Operations</title>
-  <meta name="description" content="Calgary property maintenance & rental turnover services for landlords and property managers and Owners/Renters: move-out cleaning, punch-list repairs, snow & ice removal, yard care/lawn care, and junk removal/disposal. Fast response and clear pricing." />
+  <meta name="description" content="PurpleStar Property Operations | Calgary property maintenance & rental turnover services for landlords and property managers and Owners/Renters: move-out cleaning, punch-list repairs, snow & ice removal, yard care/lawn care, and junk removal/disposal. Fast response and clear pricing." />
   <link rel="canonical" href="https://purplestar.ca/" />
   <meta name="robots" content="index,follow" />
   <meta name="theme-color" content="#0b0614" />
