removing snow/ice

--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
 
   <!-- Favicons -->
   <link rel="icon" type="image/png" sizes="64x64" href="/assets/favlogo.png">
-  
   <link rel="shortcut icon" href="/assets/favlogo.png">
 
   <!-- Open Graph -->
   <meta property="og:title" content="PurpleStar Property Operations — Calgary Property Maintenance & Rental Turnovers" />
-  <meta property="og:description" content="Move-out cleaning, turnovers & repairs, snow & ice removal, yard care, and junk removal/disposal. Built for landlords and property managers in Calgary." />
+  <meta property="og:description" content="Move-out cleaning, turnovers & repairs, yard care, and junk removal/disposal. Built for landlords and property managers in Calgary." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://purplestar.ca/" />
   <meta property="og:image" content="https://purplestar.ca/assets/logow.jpg" />
@@ -25,7 +24,7 @@
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="PurpleStar Property Operations — Calgary Property Maintenance & Turnovers" />
-  <meta name="twitter:description" content="Turnovers, cleaning, snow & ice, yard care, and junk removal/disposal in Calgary." />
+  <meta name="twitter:description" content="Turnovers, cleaning, yard care, and junk removal/disposal in Calgary." />
   <meta name="twitter:image" content="https://purplestar.ca/assets/logow.jpg" />
 
   <link rel="stylesheet" href="styles.css" />
@@ -45,12 +44,11 @@
       "Chestermere, AB",
       "Okotoks, AB"
     ],
-    "description": "Calgary property maintenance and rental turnover services for landlords and property managers: move-out cleaning, punch-list repairs, snow & ice removal, yard care/lawn care, and junk removal/disposal.",
+    "description": "Calgary property maintenance and rental turnover services for landlords and property managers: move-out cleaning, punch-list repairs, yard care/lawn care, and junk removal/disposal.",
     "serviceType": [
       "Rental turnovers",
       "Move-out cleaning",
       "Punch-list repairs",
-      "Snow removal",
       "De-icing",
       "Yard care and lawn care",
       "Junk removal and disposal"
@@ -85,7 +83,7 @@
         "name": "Do you provide before and after photos?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "Yes. Photo updates are available on request for cleaning, repairs, yard work, snow/ice visits, and junk removal."
+          "text": "Yes. Photo updates are available on request for cleaning, repairs, yard work, and junk removal."
         }
       },
       {
@@ -136,7 +134,7 @@
           </h1>
 
           <p class="hero__sub">
-            Move-out cleaning, punch-list repairs, snow &amp; ice removal, yard care/lawn care, and junk removal/disposal.
+            Move-out cleaning, punch-list repairs, yard care/lawn care, and junk removal/disposal.
             Clear quotes, dependable scheduling, and photo updates when requested.
           </p>
 
@@ -211,19 +209,6 @@
                 <li>Kitchens &amp; bathrooms</li>
                 <li>Floors, baseboards, surfaces</li>
                 <li>Final detail + photo update (on request)</li>
-              </ul>
-            </div>
-          </article>
-
-          <article class="card">
-            <img class="card__photo" src="assets/snow.png" alt="Snow and ice removal in Calgary" loading="lazy" decoding="async" width="640" height="420" />
-            <div class="card__body">
-              <h3>Snow &amp; Ice Removal</h3>
-              <p>Clear, safe access for tenants and guests.</p>
-              <ul class="card__bullets">
-                <li>Walkways, steps, entryways</li>
-                <li>De-icing as needed</li>
-                <li>Scheduled or on-demand</li>
               </ul>
             </div>
           </article>
@@ -314,7 +299,6 @@
         <div class="rates" aria-label="Starting rates">
           <strong>Starting From</strong>
           <span>Move-Out Cleaning from $199 <em>(small unit / light scope)</em></span>
-          <span>Snow/Ice from $49 <em>(basic walk/steps)</em></span>
           <span>Yard Care from $59 <em>(small yard)</em></span>
           <span>Turnovers from $299 <em>(basic punch list)</em></span>
           <span>Junk removal from $129 <em>(small load)</em></span>
@@ -420,7 +404,6 @@
                   <option value="">Select one…</option>
                   <option value="Turnovers & Repairs">Turnovers & Repairs</option>
                   <option value="Move-Out Cleaning">Move-Out Cleaning</option>
-                  <option value="Snow & Ice Removal">Snow & Ice Removal</option>
                   <option value="Seasonal Yard Care">Seasonal Yard Care</option>
                   <option value="Junk Removal & Disposal">Junk Removal & Disposal</option>
                   <option value="Other">Other</option>
